2001-12-06  Alasdair Allan <aa@astro.ex.ac.uk>

        * Original version